--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc"
+    "build": "tsc && cp package.json dist/"
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.17.9",
     "@types/socket.io": "^3.0.2",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nanoid": "^5.0.4",
+    "nanoid": "^5.0.9",
     "socket.io": "^4.7.2",
     "typescript": "^5.3.3"
   },
