--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,15 +10,11 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": ".",
-    "allowJs": true,
-    "resolveJsonModule": true,
     "paths": {
       "*": ["node_modules/*"]
     },
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ]
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["node", "express", "socket.io"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
