--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "*": ["node_modules/*"]
     },
     "typeRoots": ["./node_modules/@types"],
-    "types": ["node", "express", "socket.io"]
+    "types": ["node", "express"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
